--- a/simulator/templates/account/email.html
+++ b/simulator/templates/account/email.html
@@ -60,7 +60,7 @@
 {% endblock %}
 
 
-{% block extra_body %}
+{% block script %}
 <script type="text/javascript">
 (function() {
   var message = "{% trans 'Do you really want to remove the selected e-mail address?' %}";
