--- a/simulator/templates/account/base.html
+++ b/simulator/templates/account/base.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>{% block head_title %}{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <style>
-      .form-group {
-        margin-top: 10px;
-      }
-    </style>
-    {% block extra_head %}
-    {% endblock %}
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+   {% block css%}
+   {% endblock%}
   </head>
   <body>
-    {% block body %}
 
     {% if messages %}
       <div class="p-2">
@@ -22,24 +15,46 @@
       </div>
     {% endif %}
 
-    <div class="p-3 mb-3 bg-dark">
-      <div class="container d-flex justify-content-between">
-          {% if user.is_authenticated %}
-          <div><a class="text-light" href="{% url 'account_email' %}">Change E-mail</a></div>
-          <div><a class="text-light" href="{% url 'home' %}">Home</a></div>
-          <div><a class="text-light" href="{% url 'account_logout' %}">Sign Out</a></div>
-          {% else %}
-          <div><a class="text-light" href="{% url 'account_login' %}">Sign In</a></div>
-          <div><a class="text-light" href="{% url 'account_signup' %}">Sign Up</a></div>
-          {% endif %}
-      </div>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
+      </li>
+       {% if user.is_authenticated %}
+  <li class="nav-item">
+          <a class="nav-link" href="{% url 'account_email' %}">Change E-mail</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a>
+        </li>
+
+      {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'account_login' %}">Sign In</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+        </li>
+      {% endif %}
+    </ul>
+    
+  </div>
+</nav>
+
     {% block content %}
-    {% endblock %}
-    {% endblock %}
-    {% block extra_body %}
+    {% endblock %} <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+
+    {% block script %}
     {% endblock %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
 </html>
