--- a/simulator/templates/dashboard/home.html
+++ b/simulator/templates/dashboard/home.html
@@ -1,7 +1,7 @@
 {% extends 'account/base.html' %}
 
 {% block content %}
-    <div class="text-center">
+    <div class="container text-center">
         <h2>Home</h2>
         <p>Hello {{ user.first_name }}!</p>
         <p>Your Username : {{ user }}</p>
